@@ -28,6 +28,9 @@ import ec.util.*;
 
 public class SimpleEvaluator extends Evaluator
     {
+	public static final String P_CLONE_PROBLEM = "clone-problem";
+	public boolean cloneProblem;
+
     // checks to make sure that the Problem implements SimpleProblemForm
     public void setup(final EvolutionState state, final Parameter base)
         {
@@ -35,6 +38,10 @@ public class SimpleEvaluator extends Evaluator
         if (!(p_problem instanceof SimpleProblemForm))
             state.output.fatal("" + this.getClass() + " used, but the Problem is not of SimpleProblemForm",
                 base.push(P_PROBLEM));
+
+        cloneProblem =state.parameters.getBoolean(base.push(P_CLONE_PROBLEM), null, true);
+        if (!cloneProblem && (state.breedthreads > 1)) // uh oh, this can't be right
+            state.output.fatal("The Evaluator is not cloning its Problem, but you have more than one thread.", base.push(P_CLONE_PROBLEM));
         }
     
     /** A simple evaluator that doesn't do any coevolutionary
@@ -49,7 +56,10 @@ public class SimpleEvaluator extends Evaluator
             int from[] = new int[state.population.subpops.length];
             for(int i = 0; i < state.population.subpops.length; i++)
                 { numinds[i] = state.population.subpops[i].individuals.length; from[i] = 0; }
-            evalPopChunk(state,numinds,from,0,(SimpleProblemForm)(p_problem.clone()));  
+            if (cloneProblem)
+				evalPopChunk(state,numinds,from,0,(SimpleProblemForm)(p_problem.clone()));
+			else
+				evalPopChunk(state,numinds,from,0,(SimpleProblemForm)(p_problem));
             }
         else
             {
@@ -94,16 +104,17 @@ public class SimpleEvaluator extends Evaluator
                 r.from = from[y];
                 r.me = this;
                 r.state = state;
-                r.p = (SimpleProblemForm)(p_problem.clone());
+                r.p = (SimpleProblemForm)(p_problem.clone()); // should ignore cloneProblem parameter here 
                 t[y] = new Thread(r);
                 t[y].start();
                 }
 
             // gather the threads
-            for(int y=0;y<state.evalthreads;y++) try
-                                                     {
-                                                     t[y].join();
-                                                     }
+            for(int y=0;y<state.evalthreads;y++) 
+				try 
+					{ 
+					t[y].join(); 
+					}
                 catch(InterruptedException e)
                     {
                     state.output.fatal("Whoa! The main evaluation thread got interrupted!  Dying...");
