@@ -56,6 +56,9 @@ public class SpatialBreeder extends SimpleBreeder
         if (sequentialBreeding) // uh oh, untested
             state.output.warning("SpationBreeder hasn't been well tested with sequential evaluation, though it should probably work fine.  You're on your own.",
                 base.push(P_SEQUENTIAL_BREEDING));
+
+		if (!clonePipelineAndPopulation)
+			state.output.fatal("clonePipelineAndPopulation must be true for SpatialBreeder.");
         }
                 
     protected void breedPopChunk(Population newpop, EvolutionState state,
